2010-02-10  Boyd Duffee <b dot duffee at isc dot keele dot ac dot uk>

	* Fixed bugs in Query.pm: 
		- #35645 filed at rt.cpan.org (Ampersands);
		- last line missing from data fetch (while condition tested 
			in wrong order)

	* updated tests to reflect current ADS values and test for bug #35645

2003-07-15  Alasdair Allan <aa@astro.ex.ac.uk>

        * ADS.pm: Introduced a placeholder class to get round a documentation
          bug on search.cpan.org.

        * Fixed MANIFEST problems and released as v1.20.7
                  
2003-07-02  Alasdair Allan <aa@astro.ex.ac.uk>

        * Removed some tests from t/*.t since the things they were based
          on kept changing and I had to update the module every time. The
          test quite is now somewhat uncomplete. This is not good. 
          
2002-09-23  Alasdair Allan <aa@astro.ex.ac.uk>

        * Query/Query.pm: Fixed a bug which meant that that followup
	  queries no longer worked with the new interface.

2002-09-03  Alasdair Allan <aa@astro.ex.ac.uk>

        * Query/Query.pm: Modified query string to reflect changes in
          the ADS interface, if you wondered where the Journal strings
          went this should fix it. Fixed handling of 500 errors as these
          are now returned under some circumstances by ADS when no results 
          are found.
          
        * t/paper.t: Fixed tests, same problem.  

2002-05-30  Alasdair Allan <aa@astro.ex.ac.uk>

        * t/paper.t: Minor bugfix to test harness.
        
2002-01-10  Alasdair Allan <aa@astro.ex.ac.uk>

        * Query/Query.pm: Added method to allow you to decide wether only
          refereed, non-refereed or all bibiliographic sources are queried.
       
2002-01-09  Alasdair Allan <aa@astro.ex.ac.uk>

        * Query/Query.pm: Added start & end year/month options to the
          query module so that the time over which the query can be made
          can be specified.
           
2001-12-03  Alasdair Allan <aa@astro.ex.ac.uk>
